--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,7 @@
     "express": "^4.18.2",
     "ws": "^8.13.0",
     "fluent-ffmpeg": "^2.1.2",
-    "ffmpeg-static": "^5.1.0",
-    "wav-decoder": "^1.3.0"
+    "ffmpeg-static": "^5.1.0"
   },
   "engines": {
     "node": ">=18"
